apps/gateway-public/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-public
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: public-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-public
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg-public
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.froystein.jp"
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: http-bare
      protocol: HTTP
      port: 80
      hostname: "froystein.jp"
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: tcp-echo
      protocol: TCP
      port: 9000
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
